--- a/style.css
+++ b/style.css
@@ -1,6 +1,69 @@
-h1 {
-  font-family: "Dancing Script", cursive;
-}
-p {
+h1,
+h2,
+h3 {
   font-family: "Vollkorn", serif;
+  font-weight: 400px;
+  font-size: 48px;
+  text-align: center;
+}
+
+h2 {
+  opacity: 0.6;
+  text-align: center;
+  margin-top: 0;
+}
+h3 {
+  margin-bottom: 0;
+  margin-top: 50px;
+}
+body {
+  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  font-family: "Vollkorn", serif;
+}
+
+.contacts {
+  margin-top: 500px;
+}
+.icon {
+  width: 100%;
+  text-align: center;
+  font-size: 48px;
+}
+.nav-color {
+  background-color: #dc9aee;
+}
+#button {
+  text-align: center;
+}
+.button-links {
+  display: flex;
+  justify-content: center;
+}
+#projects {
+  margin: 20px;
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  background-color: #dc9aee;
+  color: #000;
+  transition: all ease-in-out;
+  cursor: pointer;
+}
+#projects:hover {
+  background-color: #fff;
+  color: #dc9aee;
+}
+#contacts {
+  margin: 20px;
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  background-color: #fff;
+  color: #dc9aee;
+  transition: all ease-in-out;
+  cursor: pointer;
+}
+#contacts:hover {
+  background-color: #dc9aee;
+  color: #fff;
 }
