--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ p {
   width: 100%;
   text-align: center;
   font-size: 48px;
-  color: #000;
+  color: #9b1fe8;
 }
 .nav-color {
   background-color: #dc9aee;
