--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ h3 {
   margin-bottom: 0;
   margin-top: 50px;
 }
+h4 {
+  font-weight: 700;
+}
 body {
   background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   font-family: "Vollkorn", serif;
