--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ footer #email {
 }
 #projects {
   margin: 20px;
+  margin-bottom: 10px;
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
